# salary-management

./: .dockerignore  .env  .gitattributes  .gitignore  DEPLOYMENT.md  DIAGRAMS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
app/: __init__.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  plan.md  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 20260529_0002_add_master_data.py  20260530_0003_store_employee_master_values.py  20260530_0004_master_data_config_employee_names.py
backend/app/: main.py
backend/app/api/: analytics.py  dependencies.py  employees.py  master_data.py
backend/app/core/: config.py
backend/app/models/: __init__.py  audit_event.py  employee.py  employee_salary_record.py  exchange_rate.py  master_data.py
backend/app/schemas/: analytics.py  audit_event.py  common.py  employee.py  exchange_rate.py  salary_record.py
backend/app/seed/: __init__.py  cli.py  docker_bootstrap_cli.py  exchange_rate_cli.py  exchange_rates.py  generator.py  master_data.py  master_data_cli.py  persistence.py  setup_cli.py
backend/data/: first_names.txt  last_names.txt
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_employee_api.py  test_master_data_api.py  test_salary_analytics_api.py  test_seed_persistence.py
backend/tests/unit/: test_all_seed_cli.py  test_config.py  test_employee_routes.py  test_exchange_rate_seed.py  test_health.py  test_master_data_seed.py  test_models.py  test_schemas.py  test_seed_generator.py  test_seed_persistence_unit.py
(+48 files in other folders)
