[project]
name = "salary-management-api"
version = "0.1.0"
description = "FastAPI backend for the salary management assessment."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0,<2",
    "fastapi>=0.115.0,<1",
    "psycopg[binary]>=3.2.0,<4",
    "pydantic-settings>=2.7.0,<3",
    "sqlalchemy>=2.0.36,<3",
    "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1",
    "mypy>=1.14.0,<2",
    "pytest>=8.3.0,<9",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.8.0,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests requiring a disposable PostgreSQL database configured through TEST_DATABASE_URL",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
